tests/query_errors/pipeline_unknown_param/error.txt
Error: 
    9 | with
   10 |  new_param = 43
      | ^^^^^^^^^^^^^^^ Unknown parameter new_param